--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,9 @@
         "map": "cpp",
         "set": "cpp",
         "fstream": "cpp",
-        "__node_handle": "cpp"
+        "__node_handle": "cpp",
+        "in.h": "c",
+        "inet.h": "c",
+        "socket.h": "c"
     }
 }
