--- a/webcam/Makefile
+++ b/webcam/Makefile
@@ -13,7 +13,7 @@ client: wclient.c webcam.c
 	gcc -o wclient.o wclient.c webcam.c
 
 move: wmove.c wmove.c
-	gcc -o wmove.o wmove.c webcam.c
+	gcc -o wmove.o wmove.c
 
 server: wserver.c
 	gcc -o wserver.o wserver.c
