--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,8 @@
         "in.h": "c",
         "inet.h": "c",
         "socket.h": "c",
-        "mman.h": "c"
-    }
+        "mman.h": "c",
+        "string.h": "c"
+    },
+    "C_Cpp.default.compilerPath": "/nix/store/lbk30k56awz9vz9qpid93fkjns0xwlhd-gcc-wrapper-13.3.0/bin/gcc"
 }
