--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,7 +88,9 @@
         "socket.h": "c",
         "mman.h": "c",
         "string.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "numeric": "cpp",
+        "iomanip": "cpp"
     },
     "C_Cpp.default.compilerPath": "/nix/store/lbk30k56awz9vz9qpid93fkjns0xwlhd-gcc-wrapper-13.3.0/bin/gcc"
 }
