--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,5 +92,6 @@
         "numeric": "cpp",
         "iomanip": "cpp"
     },
-    "C_Cpp.default.compilerPath": "/nix/store/lbk30k56awz9vz9qpid93fkjns0xwlhd-gcc-wrapper-13.3.0/bin/gcc"
+    // "C_Cpp.default.compilerPath": "/nix/store/lbk30k56awz9vz9qpid93fkjns0xwlhd-gcc-wrapper-13.3.0/bin/gcc",
+    "makefile.configureOnOpen": false
 }
